--- a/package.json
+++ b/package.json
@@ -11,42 +11,43 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "-": "^0.0.1",
-    "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
-    "@radix-ui/react-popover": "^1.0.6",
-    "@radix-ui/react-scroll-area": "^1.0.4",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@types/node": "20.3.2",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.4.0",
-    "class-variance-authority": "^0.6.1",
-    "clsx": "^1.2.1",
-    "g": "^2.0.1",
-    "lucide-react": "^0.255.0",
-    "next": "13.4.8",
-    "next-themes": "^0.2.1",
-    "pnpm": "^9.1.1",
-    "postcss": "8.4.24",
+    "@radix-ui/react-aspect-ratio": "^1.1.8",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@types/node": "^20.19.27",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
+    "autoprefixer": "^10.4.23",
+    "axios": "^1.13.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.562.0",
+    "next": "14.2.35",
+    "next-themes": "^0.4.6",
+    "postcss": "^8.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-wrap-balancer": "^1.0.0",
+    "react-wrap-balancer": "^1.1.1",
     "server-only": "^0.0.1",
-    "sharp": "^0.32.1",
-    "swr": "^2.2.0",
-    "tailwind-merge": "^1.13.2",
-    "tailwindcss": "3.3.2",
-    "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.5",
-    "use-sound": "^4.0.1",
-    "zustand": "^4.3.8"
+    "sharp": "^0.34.5",
+    "swr": "^2.3.8",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^3.4.19",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "~5.6.3",
+    "use-sound": "^5.0.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7"
+    "eslint": "^8.57.1",
+    "eslint-config-next": "14.2.35",
+    "@typescript-eslint/parser": "8.51.0"
+  },
+  "engines": {
+    "node": ">=20 <23"
   }
 }
