--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "next": "14.2.35",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "18.2.0",
